Fixed mobile text wrap issue

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -100,7 +100,7 @@
 }
 
 .desc-wrapper {
-    width: 90em;
+    width: 90%;
     margin: 1em auto 1em auto;
     p {
         margin: 1em auto 1em auto;
